Visiting https://radio.garden infinitely redirects.
Categories
(Core :: Networking, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox85 | --- | unaffected |
| firefox86 | --- | unaffected |
| firefox87 | --- | disabled |
| firefox88 | --- | fixed |
People
(Reporter: emilio, Assigned: kershaw)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [necko-triaged])
Attachments
(1 file)
This is an issue with HTTPS-only mode and with DoH. But the DoH thing is (IMO) unexpected, and it's a regression:
STR:
mozregression --launch 2021-02-15 --pref network.trr.mode:2 -a https://radio.garden(bad)mozregression --launch 2021-02-15 --pref network.trr.mode:5 -a https://radio.garden(good)
This was initially reported here: https://github.com/webcompat/web-bugs/issues/67181
| Reporter | ||
Updated•5 years ago
|
Updated•5 years ago
|
| Reporter | ||
Comment 1•5 years ago
|
||
For reference, the site redirects from https: to the http: version using JS.
| Reporter | ||
Comment 2•5 years ago
|
||
But there's something more to it, because something like this works...
Comment 3•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #2)
But there's something more to it, because something like this works...
We redirect to https because the site above has HTTPS RR dns record. We should exclude checking HTTPS RR records if a site is doing a redirect.
but this is worth mentioning at ietf.
Updated•5 years ago
|
Comment 5•5 years ago
|
||
Set release status flags based on info from the regressing bug 1686421
I reported Bug 1692774 which was a similar or the same problem with site http://slither.io.
The advice was:
slither.io has an HTTPS RR record, so Firefox will try to upgrade to HTTPS.
To disable this feature, you could turn off the pref network.dns.upgrade_with_https_rr.
The reason of the infinite loading loop is caused by the code of slither.io below.
if (((window.location.href+'').toLowerCase()).indexOf('https:') == 0) {
window.location = 'http:'+window.location.href.substr(6);
}
My response is:
This was working in Firefox Nightly until Thursday or Friday, 11~12Feb2021.
In my preferences, I have "Don't Enable HTTPS-Only Mode" set.
Maybe there needs to be another choice "Don't attempt to redirect to https".
Ideally there would be an allow/deny list similar to other Preference options,
i.e. attempt to upgrade to https unless the site was in the 'don't attempt' list.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
Updated•5 years ago
|
Comment 8•5 years ago
|
||
Marked as disabled on 87 due to the nightly only check at https://searchfox.org/mozilla-central/rev/3f97afc8db535f9b0232222cb48cc4cbf8334c76/modules/libpref/init/StaticPrefList.yaml#8954
Comment 10•5 years ago
|
||
| bugherder | ||
Comment 11•5 years ago
|
||
¡Hola y'all!
Confirmed that https://radio.garden now loads on Firefox Nightly built from https://hg.mozilla.org/mozilla-central/rev/fe11dc32ac201b7a69172afbbb473d286a167a1d
¡Gracias!
Alex
Comment 12•4 years ago
|
||
@smolnar this issue still seems to be present. And it's also reproducible on ung-chromium
Comment 13•4 years ago
|
||
Please file a new bug for the issue you're seeing. This was closed nearly a year ago.
Updated•4 years ago
|
Description
•