Bug 1693225 - Don't do HTTPS upgrade if a site is redirecting to HTTP r=necko-reviewers,valentin,dragana

Differential Revision: https://phabricator.services.mozilla.com/D105504